Primeira versão consistente do programa